k8s/Ingress/ingress_basicao.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basicao
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port:
                number: 80
