k8s/Ingress/ingress_default_route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default-route
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
