k8s/Ingress/ingress_rota_path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-rota
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port:
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: web-green
              port:
                number: 80
